--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t cesqueda/docker-react -f Dockerfiles.dev . 
+  - docker build -t cesqueda/docker-react -f Dockerfile.dev . 
 
 script:
   - docker run -e CI=true cesqueda/docker-react npm run test -- --coverage
