--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t cesqueda/docker-react -f Dockerfile.dev . 
 
 script:
-  - docker run -e CI=true cesqueda/docker-react npm run test -- --coverage
+  - docker run  cesqueda/docker-react npm run test -- --coverage
